2003-04-24  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smsc_smpp.c: added using of smpp_error_to_string
      function for error log entries.

2003-04-24  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/md5.[ch]: fixed compiler warnings about static functions.

2003-04-24  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smpp_pdu.c: fixed typo in error message.
    
2003-04-24  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smpp_pdu.[ch],gw/smsc/smsc_smpp.c: Moved SMPP error codes
      enum to smpp_pdu.h. Added additional error codes. Added new function
      smpp_error_to_string(...), so if error occurs we can log fully error
      string and we have no need to looking in SMPP spec.

2003-04-22  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/gwlib.h: added md5 header inclusion.
    * gwlib/md5.[ch]: added MD5 message digest algorithm. This may be used in
      various places, including computation of unique IDs etc.
    * test/test_md5.c: added simple testing program.

2003-04-17  Stipe Tolj  <tolj@wapme-systems.de>
    * configure[.in]: removed checking of libiconv.a. Some systems, like Linux
      contains iconv functions inside glibc. We check the for the header only.
    * configure[.in]: seems I'm wacky today. Of course we need the checking 
      still, otherwise systems that need linking against the lib will fail the
      build process, ie. Cygwin. So I'm adding this again, but without 
      explicite warning message.

2003-04-17  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: fixing a missing urldecode in brunet_send_sms().
    * gw/smsc/smsc_http.c: fixed minor issue in brunet_send_sms().

2003-04-16  Stipe Tolj  <tolj@wapme-systems.de>
    * utils/mtbatch.c: added MT batch utility. This application connects to
      bearerbox via smsbox interface and sequentially sends a pulk of MT messages 
      to a speficied range of receiver numbers. Currently 7-bit only.