@@ -1,3 +1,7 @@
+2003-04-25  Alexander Malysh  <a.malysh@centrium.de>
+    * gw/smsc/smsc_smpp.c: fixed cheking of esm_class for DLR's.
+      Following SMPP v.3.4. spec., we should check only bits 2-5.
+    
 2003-04-24  Alexander Malysh  <a.malysh@centrium.de>
     * gw/smsc/smsc_smpp.c: added using of smpp_error_to_string
       function for error log entries.
